[gd_scene load_steps=14 format=3 uid="uid://oxptmc1ha1u7"]

[ext_resource type="Material" uid="uid://e22hk3r50clu" path="res://assets/kenney_googly-eyes/Materials/googly-a.tres" id="1_cr6gf"]
[ext_resource type="Script" path="res://entities/bosses/many-parts/many_parts_boss.gd" id="1_swlks"]
[ext_resource type="Texture2D" uid="uid://dyjaeeymbx7p0" path="res://assets/kenney_googly-eyes/PNG/googly-b.png" id="2_n8xhk"]
[ext_resource type="Texture2D" uid="uid://3hir828hhwoe" path="res://assets/kenney_googly-eyes/PNG/googly-c.png" id="3_h063y"]
[ext_resource type="Texture2D" uid="uid://btibk0a4kejmh" path="res://assets/kenney_googly-eyes/PNG/googly-e.png" id="4_tkaan"]

[sub_resource type="SphereMesh" id="SphereMesh_wfqhj"]
radius = 5.0
height = 10.0

[sub_resource type="PlaneMesh" id="PlaneMesh_r34g3"]
material = ExtResource("1_cr6gf")
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4uipx"]
transparency = 1
albedo_texture = ExtResource("2_n8xhk")

[sub_resource type="PlaneMesh" id="PlaneMesh_otxua"]
material = SubResource("StandardMaterial3D_4uipx")
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d1dhs"]
transparency = 1
albedo_texture = ExtResource("3_h063y")

[sub_resource type="PlaneMesh" id="PlaneMesh_q3qjt"]
material = SubResource("StandardMaterial3D_d1dhs")
size = Vector2(1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_874mx"]
transparency = 1
albedo_texture = ExtResource("4_tkaan")

[sub_resource type="PlaneMesh" id="PlaneMesh_m5adp"]
material = SubResource("StandardMaterial3D_874mx")
size = Vector2(1.3, 1.3)

[node name="ManyPartsBoss" type="Node3D"]
script = ExtResource("1_swlks")

[node name="MainBody" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_wfqhj")

[node name="Eye" type="MeshInstance3D" parent="MainBody"]
transform = Transform3D(-0.963691, -0.26702, 1.16718e-08, -0.0468768, 0.169181, -0.984469, 0.262873, -0.948724, -0.175556, -1.53173, 1.24538, -4.68215)
mesh = SubResource("PlaneMesh_r34g3")
skeleton = NodePath("../..")

[node name="Eye2" type="MeshInstance3D" parent="MainBody"]
transform = Transform3D(-0.991037, 0.115547, 0.0670464, -0.0468769, 0.169181, -0.98447, -0.125096, -0.978788, -0.162249, 1.51907, 1.24538, -4.68215)
mesh = SubResource("PlaneMesh_otxua")
skeleton = NodePath("../..")

[node name="Eye3" type="MeshInstance3D" parent="MainBody"]
transform = Transform3D(-0.998351, -0.0406245, 0.0405565, -0.0422096, 0.0406973, -0.99828, 0.0389041, -0.998345, -0.042345, -0.247844, 0.186537, -4.99896)
mesh = SubResource("PlaneMesh_q3qjt")
skeleton = NodePath("../..")

[node name="Eye5" type="MeshInstance3D" parent="MainBody"]
transform = Transform3D(-0.998893, -0.00420284, 0.0468414, -0.0468769, 0.169181, -0.98447, -0.00378719, -0.985576, -0.169191, -0.0123281, 1.24538, -4.86647)
mesh = SubResource("PlaneMesh_m5adp")
skeleton = NodePath("../..")

[node name="Eye6" type="MeshInstance3D" parent="MainBody"]
transform = Transform3D(0.991773, 0.117693, -0.0503452, 0.050643, 0.000461489, 0.998717, 0.117565, -0.99305, -0.0055026, 1.04204, -0.135746, -4.97281)
mesh = SubResource("PlaneMesh_m5adp")

[node name="Eye4" type="MeshInstance3D" parent="MainBody"]
transform = Transform3D(-0.971328, 0.110363, -0.210575, 0.23141, 0.235821, -0.943842, -0.0545072, -0.96551, -0.254598, 0.721497, 2.2849, -4.5749)
mesh = SubResource("PlaneMesh_q3qjt")
skeleton = NodePath("../..")

[node name="Eye7" type="MeshInstance3D" parent="MainBody"]
transform = Transform3D(-0.986764, -0.161011, 0.0193163, -0.0468769, 0.169181, -0.98447, 0.155242, -0.972344, -0.17449, -1.00196, 2.07339, -4.59406)
mesh = SubResource("PlaneMesh_otxua")
skeleton = NodePath("../..")

[node name="OuterLayer" type="Node3D" parent="."]

[node name="OuterLayer2" type="Node3D" parent="."]

[node name="OuterLayer3" type="Node3D" parent="."]
